Fixed z-index; removed animate.css

--- a/src/stylesheets/contact.scss
+++ b/src/stylesheets/contact.scss
@@ -23,15 +23,21 @@
         height: 100% !important;
     }
 
+    .content, footer {
+        position: relative;
+        z-index: 10;
+        opacity: 1;
+    }
+
     main {
         margin: 0 auto;
-        padding-top: 18vh;
+        padding-top: 19vh;
         line-height: 1.25;
 
         .text-bg {
             position: absolute;
             opacity: 0.9;
-            z-index: 1;
+            z-index: 1 !important;
             width: 100%; height: 1000%;
             right: 0;
             left: 6%;
@@ -44,21 +50,16 @@
             }
         }
 
-        .content, footer {
-            z-index: 10;
-            z-index: 2;
-        }
-
         a {
             text-decoration: none;
         }
 
         h5 {
-            font-size: 12pt !important;
+            font-size: 11pt !important;
         }
 
         h2 {
-            font-size: 28pt !important;
+            font-size: 27pt !important;
         }
 
         ul {
@@ -86,7 +87,7 @@
     footer {
         position: relative;
         top: 35vh;
-        left: 20px;
+        left: 30px;
         
         small {
             a {
