--- a/src/stylesheets/landing.scss
+++ b/src/stylesheets/landing.scss
@@ -43,7 +43,11 @@
         height: 40vh; width: 33vh;
         border-radius: 50%;
         background-size: cover;
-        background-position-x: 50%;        
-        animation-delay: 5s;
+        background-position-x: 50%;
     }
+}
+
+.slide-in-bck-center {
+	animation: slide-in-bck-center 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;       
+    animation-delay: 5s;
 }
